# gns3fy

./: .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  tests.yml
about/changelog/: index.html
about/license/: index.html
api_reference/: index.html
docs/: Makefile  mkdocs.yml  pydoc-markdown.yml
docs/content/: api_reference.md  index.md  user-guide.md
docs/content/about/: changelog.md  license.md
gns3fy/: __init__.py  api.py  base.py  connector.py  drawing_utils.py  drawings.py  gns3fy.py  helpers.py  links.py  nodes.py  ports.py  projects.py  server.py  services.py  snapshots.py  templates.py
gns3fy/models/: __init__.py  base.py  connector.py  drawings.py  links.py  nodes.py  ports.py  projects.py  snapshots.py  templates.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_api.py  test_drawing_utils.py  test_gns3fy.py  test_mock_server.py  test_nodes.py  test_templates.py
tests/data/: computes.json  links.json  links.py  links_new.json  nodes.json  nodes.py  nodes_new.json  project_drawings.json  project_snapshots.json  projects.json  projects.py  projects_new.json  templates.json
tests/integration/: conftest.py  test_project_flow.py  test_template_flow.py
tests/unit/: conftest.py  test_connector.py  test_links.py  test_nodes.py  test_projects.py  test_server.py  test_templates.py
tests/unit/data/: compute_ports.json  compute_qemu_images.json  files.txt  nodes.json  nodes.py  nodes_new.json  projects.py  templates_new.json  version.json
user-guide/: index.html
