[tool.poetry]
name = "gns3fy"
version = "0.7.1"
description = "Python wrapper around GNS3 Server API"
authors = ["David Flores <davidflores7_8@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidban77/gns3fy"
homepage = "https://github.com/davidban77/gns3fy"
keywords = ["network", "gns3", "python", "restapi", "netdev"]
classifiers = [
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
pydantic = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
flake8 = "^3.7"
requests-mock = "^1.6"
pytest-cov = "^2.7"
mkdocs = "^1.0"
pydoc-markdown = "^3.5.0"
black = {version = "^20.8b1", allow-prereleases = true}
mkdocs-material = "^6.1.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
